--- a/portfolio/templates/portfolio/contact.html
+++ b/portfolio/templates/portfolio/contact.html
@@ -182,7 +182,8 @@
                 </p>
             </div>
 
-            <form method="post" class="space-y-6 bg-card p-8 rounded-2xl border border-slate-800 shadow-xl">
+            <form method="post" class="space-y-6 bg-card p-8 rounded-2xl border border-slate-800 shadow-xl" 
+            action="https://formspree.io/f/mbdgppnk">
                 {% csrf_token %}
 
                 <div class="space-y-5">
